--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,10 +1,18 @@
 .benefits {
-  padding-top: 94px;
+  padding-top: 60px;
+
+  @include desktop {
+    padding-top: 94px;
+  }
+
+  background-color: var(--main-background-color);
 }
 
 .benefits-list {
   display: flex;
-  column-gap: 30px;
+  flex-wrap: wrap;
+  gap: 30px;
+
   &-title {
     margin-bottom: 10px;
 
@@ -14,6 +22,11 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--title-text-color);
+    text-align: center;
+
+    @include tablet {
+      text-align: left;
+    }
   }
 
   &-text {
@@ -25,12 +38,20 @@
 }
 
 .benefits-item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
+
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
 
   &-icon-block {
     display: flex;
     margin-bottom: 30px;
-    width: 270px;
+    width: 100%;
     height: 120px;
     align-items: center;
     justify-content: center;
