--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,21 +1,33 @@
 .clients {
-  padding-top: 94px;
+  padding-top: 60px;
+
+  @include desktop {
+    padding-top: 94px;
+  }
+  
   background-color: var(--main-background-color);
 
   &-title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+
+    @include desktop {
+      margin-bottom: 50px;
+      font-size: 36px;
+      line-height: 1.16;
+    }
   }
 
   &-list {
     display: flex;
-    column-gap: 30px;
+    flex-wrap: wrap;
+    gap: 30px;
     justify-content: center;
     align-items: center;
   }
