--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,11 +1,28 @@
 .portfolio {
-  padding-top: 94px;
+  padding-top: 60px;
+
+  @include desktop {
+    padding-top: 94px;
+  }
+
   background-color: var(--main-background-color);
   &-list {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+
     column-gap: 8px;
-    margin-bottom: 50px;
+    row-gap: 15px;
+    margin-bottom: 40px;
+    max-width: 326px;
+
+    @include tablet {
+      max-width: 100%;
+      margin-bottom: 30px;
+      justify-content: center;
+    }
+    @include desktop {
+      margin-bottom: 50px;
+    }
   }
 }
 
@@ -48,7 +65,14 @@
 }
 
 .portfolio-works-item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
+
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 60px) / 3);
+  }
 
   background-color: var(--main-background-color);
 }
@@ -76,10 +100,14 @@
 
   background-color: var(--portfolio-card-overlay);
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+
+  @include mobile {
+    font-size: 18px;
+  }
 }
 
 .portfolio-list-link {
