--- a/sass/layouts/_procedures.scss
+++ b/sass/layouts/_procedures.scss
@@ -1,42 +1,63 @@
-.procedures-title {
-  margin-bottom: 50px;
+.procedures {
+  padding: 0;
+  @include desktop {
+    padding-bottom: 94px;
+  }
+}
 
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
+.procedures-title {
+  display: none;
+
+  @include desktop {
+    display: block;
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
 }
 
 .procedures-list {
-  display: flex;
-  column-gap: 30px;
+  display: none;
+
+  @include desktop {
+    display: flex;
+    column-gap: 30px;
+  }
 }
 
 .procedures-item {
-  width: calc((100% - 60px) / 3);
-  position: relative;
+  display: none;
 
-  &-overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
+  @include desktop {
+    display: block;
+    width: calc((100% - 60px) / 3);
+    position: relative;
 
-    background-color: var(--procedures-overlay);
-  }
+    &-overlay {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 70px;
 
-  &-text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--secondary-text-color);
+      background-color: var(--procedures-overlay);
+    }
+
+    &-text {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: var(--secondary-text-color);
+    }
   }
 }
