--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -40,7 +40,12 @@
   }
 
   &--bottom {
-    display: inline-block;
+    display: flex;
+    // display: inline-block;
+    justify-content: center;
     margin-bottom: 20px;
+    @include desktop {
+      display: inline-block;
+    }
   }
 }
