Додає адаптив модальному вікну та нове меню для мобільного

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/section";
 
 @import "./layouts/header";
+@import "./layouts/menu";
 @import "./layouts/hero";
 @import "./layouts/benefits";
 @import "./layouts/procedures";
