--- a/css/main.css
+++ b/css/main.css
@@ -320,6 +320,187 @@ img {
   }
 }
 
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms var(--transition-timing-function), visibility 250ms var(--transition-timing-function);
+}
+
+.mob-menu.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.mob-menu.is-hidden .menu-container {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 84px 48px 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms var(--transition-timing-function);
+}
+.menu-container-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--main-background-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.menu-close-btn {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: 0px;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+.icon-close {
+  width: 18.67px;
+  height: 18.67px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  fill: #000000;
+  transform: translate(-50%, -50%);
+  transition: fill 250ms var(--transition-timing-function);
+}
+.menu-close-btn:hover .icon-close, .menu-close-btn:focus .icon-close {
+  fill: var(--accent-text-color);
+}
+
+.menu__nav {
+  padding-top: 8px;
+}
+
+.menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  text-decoration: none;
+}
+.menu__link--active {
+  color: var(--accent-text-color);
+}
+
+.menu__tel--link {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-text-color);
+  text-decoration: none;
+}
+@media screen and (min-width: 480px) {
+  .menu__tel--link {
+    font-size: 34px;
+  }
+}
+
+.menu__mail--link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+  text-decoration: none;
+}
+@media screen and (min-width: 480px) {
+  .menu__mail--link {
+    font-size: 24px;
+  }
+}
+
+.menu__tel {
+  margin-bottom: 32px;
+}
+
+.mob-connect {
+  margin-bottom: 64px;
+}
+
+.mob-soc-link {
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--accent-text-color);
+}
+@media screen and (min-width: 480px) {
+  .mob-soc-link {
+    font-size: 18px;
+  }
+}
+.mob-soc-link::after:not(:last-child) {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  right: -10px;
+  height: 100%;
+  width: 1px;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+@media screen and (min-width: 480px) {
+  .mob-soc-item {
+    position: relative;
+  }
+  .mob-soc-item:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: -10px;
+    height: 100%;
+    width: 1px;
+    background-color: rgba(33, 33, 33, 0.2);
+  }
+}
+.mob-soc-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+}
+@media screen and (min-width: 480px) {
+  .mob-soc-list {
+    justify-content: start;
+    flex-wrap: nowrap;
+  }
+}
+
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
@@ -1114,12 +1295,23 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
+  width: 100%;
+  min-height: 609px;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms var(--transition-timing-function);
+}
+@media screen and (min-width: 480px) {
+  .modal-window {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 .modal-window-close {
   position: absolute;
@@ -1151,10 +1343,15 @@ img {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal-text {
+    line-height: 1.15;
+  }
 }
 
 .modal-form-wrap {
@@ -1235,37 +1432,71 @@ img {
 .confirm-wrap {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 40px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .confirm-wrap {
+    margin-bottom: 40px;
+    justify-content: center;
+  }
 }
 
 .confirm-label {
   position: relative;
   display: flex;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
+  flex-wrap: wrap;
+  font-size: 11px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+}
+@media screen and (min-width: 480px) {
+  .confirm-label {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .confirm-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .link-confirm {
   position: relative;
-  margin-left: 4px;
   padding: 0;
-  font-size: 14px;
-  line-height: 1.71;
+  margin-left: 23px;
+  font-size: 11px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--accent-text-color);
   outline-color: var(--accent-text-color);
+}
+@media screen and (min-width: 405px) {
+  .link-confirm {
+    margin-left: 4px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .link-confirm {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .link-confirm {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .link-confirm::after {
   content: "";
   display: inline-block;
   position: absolute;
   left: 0;
-  bottom: 5px;
+  bottom: 1px;
   width: 100%;
   height: 1px;
   background-color: var(--accent-text-color);
