--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -23,8 +23,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
+
+  width: 100%;
+  min-height: 609px;
+  @include mobile {
+    width: 450px;
+  }
+  @include desktop {
+    width: 528px;
+    min-height: 581px;
+  }
+
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -63,7 +72,11 @@
 
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
+
+  @include desktop {
+    line-height: 1.15;
+  }
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
@@ -152,28 +165,51 @@
 .confirm-wrap {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 40px;
+
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+  @include desktop {
+    margin-bottom: 40px;
+    justify-content: center;
+  }
 }
 
 .confirm-label {
   position: relative;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 11px;
+  line-height: 1.17;
+  @include mobile {
+    font-size: 12px;
+  }
+  @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+  }
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
 
 .link-confirm {
   position: relative;
-  margin-left: 4px;
   padding: 0;
+  margin-left: 23px;
+  @media screen and (min-width: 405px) {
+    margin-left: 4px;
+  }
 
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 11px;
+  line-height: 1.17;
+  @include mobile {
+    font-size: 12px;
+  }
+  @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+  }
   letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--accent-text-color);
@@ -183,7 +219,7 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    bottom: 5px;
+    bottom: 1px;
     width: 100%;
     height: 1px;
     background-color: var(--accent-text-color);
