--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -12,13 +12,40 @@
 
   background-color: var(--hero-bg-color);
   background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
-    url(../images/hero.jpg);
+    url(../images/hero-mob.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
+      url(../images/hero-mob-2x.jpg);
+  }
+  @include tablet {
+    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
+    url(../images/hero-tab.jpg);
+     @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
+      url(../images/hero-tab-2x.jpg);
+  }
+  }
+    @include desktop {
+    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
+    url(../images/hero.jpg);
+     @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(var(--hero-overlay), var(--hero-overlay)),
+      url(../images/hero-2x.jpg);
+  }
+  }
 
   &__title {
     margin-bottom: 30px;
@@ -27,14 +54,17 @@
     margin-right: auto;
 
     font-weight: 900;
-    font-size: 26px;
+    font-size: 24px;
+
     line-height: 1.62;
 
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--secondary-text-color);
-
+    @include mobile {
+      font-size: 26px;
+    }
     @include desktop {
       font-size: 44px;
       line-height: 1.36;
