--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -62,6 +62,26 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  flex-grow: 1;
+}
+
+.portfolio-list-link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  text-decoration: none;
+  outline: transparent;
+
+  transition: box-shadow 250ms var(--transition-timing-function);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+  &:hover .portfolio-overlay-text,
+  &:focus .portfolio-overlay-text {
+    transform: translateY(0%);
+  }
 }
 
 .portfolio-works-item {
@@ -69,6 +89,7 @@
 
   @include tablet {
     width: calc((100% - 30px) / 2);
+    // height: 100%;
   }
   @include desktop {
     width: calc((100% - 60px) / 3);
@@ -107,23 +128,6 @@
 
   @include mobile {
     font-size: 18px;
-  }
-}
-
-.portfolio-list-link {
-  display: block;
-  text-decoration: none;
-  outline: transparent;
-
-  transition: box-shadow 250ms var(--transition-timing-function);
-  &:hover,
-  &:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
-  &:hover .portfolio-overlay-text,
-  &:focus .portfolio-overlay-text {
-    transform: translateY(0%);
   }
 }
 
